--- a/01_Hyperparameter_tuning.ipynb
+++ b/01_Hyperparameter_tuning.ipynb
@@ -12,7 +12,7 @@
         "qaT01-_vuZMu",
         "GlhwpbUHutSC"
       ],
-      "authorship_tag": "ABX9TyNpJS0uTwmjluHfGpgIQfCY"
+      "authorship_tag": "ABX9TyNLntRSbx6t6YYspS9PwVdS"
     },
     "kernelspec": {
       "name": "python3",
@@ -172,10 +172,155 @@
         "    pyvirtualdisplay"
       ],
       "metadata": {
-        "id": "K6F95oOVfynT"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K6F95oOVfynT",
+        "outputId": "63f75fd2-3659-4f9e-87ef-1e6b354fb41b"
       },
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "The following NEW packages will be installed:\n",
+            "  xvfb\n",
+            "0 upgraded, 1 newly installed, 0 to remove and 40 not upgraded.\n",
+            "Need to get 784 kB of archives.\n",
+            "After this operation, 2,271 kB of additional disk space will be used.\n",
+            "Get:1 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 xvfb amd64 2:1.19.6-1ubuntu4.10 [784 kB]\n",
+            "Fetched 784 kB in 1s (1,242 kB/s)\n",
+            "Selecting previously unselected package xvfb.\n",
+            "(Reading database ... 155501 files and directories currently installed.)\n",
+            "Preparing to unpack .../xvfb_2%3a1.19.6-1ubuntu4.10_amd64.deb ...\n",
+            "Unpacking xvfb (2:1.19.6-1ubuntu4.10) ...\n",
+            "Setting up xvfb (2:1.19.6-1ubuntu4.10) ...\n",
+            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
+            "Collecting gym==0.21\n",
+            "  Downloading gym-0.21.0.tar.gz (1.5 MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.5 MB 28.8 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: gym[box2d] in /usr/local/lib/python3.7/dist-packages (0.17.3)\n",
+            "Collecting pytorch-lightning==1.5.8\n",
+            "  Downloading pytorch_lightning-1.5.8-py3-none-any.whl (526 kB)\n",
+            "\u001b[K     |████████████████████████████████| 526 kB 45.8 MB/s \n",
+            "\u001b[?25hCollecting pyvirtualdisplay\n",
+            "  Downloading PyVirtualDisplay-3.0-py3-none-any.whl (15 kB)\n",
+            "Requirement already satisfied: numpy>=1.18.0 in /usr/local/lib/python3.7/dist-packages (from gym==0.21) (1.21.6)\n",
+            "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.7/dist-packages (from gym==0.21) (1.3.0)\n",
+            "Requirement already satisfied: importlib_metadata>=4.8.1 in /usr/local/lib/python3.7/dist-packages (from gym==0.21) (4.11.3)\n",
+            "Collecting pyDeprecate==0.3.1\n",
+            "  Downloading pyDeprecate-0.3.1-py3-none-any.whl (10 kB)\n",
+            "Requirement already satisfied: tqdm>=4.41.0 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning==1.5.8) (4.64.0)\n",
+            "Requirement already satisfied: packaging>=17.0 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning==1.5.8) (21.3)\n",
+            "Collecting PyYAML>=5.1\n",
+            "  Downloading PyYAML-6.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (596 kB)\n",
+            "\u001b[K     |████████████████████████████████| 596 kB 46.4 MB/s \n",
+            "\u001b[?25hCollecting future>=0.17.1\n",
+            "  Downloading future-0.18.2.tar.gz (829 kB)\n",
+            "\u001b[K     |████████████████████████████████| 829 kB 58.8 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: torch>=1.7.* in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning==1.5.8) (1.10.0+cu111)\n",
+            "Collecting fsspec[http]!=2021.06.0,>=2021.05.0\n",
+            "  Downloading fsspec-2022.3.0-py3-none-any.whl (136 kB)\n",
+            "\u001b[K     |████████████████████████████████| 136 kB 54.9 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: tensorboard>=2.2.0 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning==1.5.8) (2.8.0)\n",
+            "Collecting torchmetrics>=0.4.1\n",
+            "  Downloading torchmetrics-0.8.0-py3-none-any.whl (408 kB)\n",
+            "\u001b[K     |████████████████████████████████| 408 kB 44.3 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning==1.5.8) (4.1.1)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning==1.5.8) (2.23.0)\n",
+            "Collecting aiohttp\n",
+            "  Downloading aiohttp-3.8.1-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (1.1 MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.1 MB 54.2 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib_metadata>=4.8.1->gym==0.21) (3.8.0)\n",
+            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging>=17.0->pytorch-lightning==1.5.8) (3.0.8)\n",
+            "Requirement already satisfied: grpcio>=1.24.3 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.5.8) (1.44.0)\n",
+            "Requirement already satisfied: protobuf>=3.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.5.8) (3.17.3)\n",
+            "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.5.8) (57.4.0)\n",
+            "Requirement already satisfied: google-auth<3,>=1.6.3 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.5.8) (1.35.0)\n",
+            "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.5.8) (0.4.6)\n",
+            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.5.8) (1.0.1)\n",
+            "Requirement already satisfied: wheel>=0.26 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.5.8) (0.37.1)\n",
+            "Requirement already satisfied: absl-py>=0.4 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.5.8) (1.0.0)\n",
+            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.5.8) (3.3.6)\n",
+            "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.5.8) (1.8.1)\n",
+            "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.5.8) (0.6.1)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from absl-py>=0.4->tensorboard>=2.2.0->pytorch-lightning==1.5.8) (1.15.0)\n",
+            "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard>=2.2.0->pytorch-lightning==1.5.8) (4.2.4)\n",
+            "Requirement already satisfied: rsa<5,>=3.1.4 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard>=2.2.0->pytorch-lightning==1.5.8) (4.8)\n",
+            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard>=2.2.0->pytorch-lightning==1.5.8) (0.2.8)\n",
+            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard>=2.2.0->pytorch-lightning==1.5.8) (1.3.1)\n",
+            "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /usr/local/lib/python3.7/dist-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard>=2.2.0->pytorch-lightning==1.5.8) (0.4.8)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning==1.5.8) (2.10)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning==1.5.8) (2021.10.8)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning==1.5.8) (3.0.4)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning==1.5.8) (1.24.3)\n",
+            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard>=2.2.0->pytorch-lightning==1.5.8) (3.2.0)\n",
+            "Collecting frozenlist>=1.1.1\n",
+            "  Downloading frozenlist-1.3.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (144 kB)\n",
+            "\u001b[K     |████████████████████████████████| 144 kB 56.4 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: charset-normalizer<3.0,>=2.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning==1.5.8) (2.0.12)\n",
+            "Collecting multidict<7.0,>=4.5\n",
+            "  Downloading multidict-6.0.2-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (94 kB)\n",
+            "\u001b[K     |████████████████████████████████| 94 kB 2.7 MB/s \n",
+            "\u001b[?25hCollecting aiosignal>=1.1.2\n",
+            "  Downloading aiosignal-1.2.0-py3-none-any.whl (8.2 kB)\n",
+            "Collecting yarl<2.0,>=1.0\n",
+            "  Downloading yarl-1.7.2-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (271 kB)\n",
+            "\u001b[K     |████████████████████████████████| 271 kB 58.2 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning==1.5.8) (21.4.0)\n",
+            "Collecting async-timeout<5.0,>=4.0.0a3\n",
+            "  Downloading async_timeout-4.0.2-py3-none-any.whl (5.8 kB)\n",
+            "Collecting asynctest==0.13.0\n",
+            "  Downloading asynctest-0.13.0-py3-none-any.whl (26 kB)\n",
+            "Collecting gym[box2d]\n",
+            "  Downloading gym-0.23.1.tar.gz (626 kB)\n",
+            "\u001b[K     |████████████████████████████████| 626 kB 34.8 MB/s \n",
+            "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
+            "    Preparing wheel metadata ... \u001b[?25l\u001b[?25hdone\n",
+            "  Downloading gym-0.23.0.tar.gz (624 kB)\n",
+            "\u001b[K     |████████████████████████████████| 624 kB 53.0 MB/s \n",
+            "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
+            "    Preparing wheel metadata ... \u001b[?25l\u001b[?25hdone\n",
+            "  Downloading gym-0.22.0.tar.gz (631 kB)\n",
+            "\u001b[K     |████████████████████████████████| 631 kB 50.9 MB/s \n",
+            "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
+            "    Preparing wheel metadata ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting box2d-py==2.3.5\n",
+            "  Downloading box2d_py-2.3.5-cp37-cp37m-manylinux1_x86_64.whl (2.1 MB)\n",
+            "\u001b[K     |████████████████████████████████| 2.1 MB 48.1 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: pyglet>=1.4.0 in /usr/local/lib/python3.7/dist-packages (from gym==0.21) (1.5.0)\n",
+            "Building wheels for collected packages: gym, future\n",
+            "  Building wheel for gym (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for gym: filename=gym-0.21.0-py3-none-any.whl size=1616827 sha256=b631dceb77e9f1cd846eedc2b34e73af35d6df61426d8d14db3faf9811c86dd1\n",
+            "  Stored in directory: /root/.cache/pip/wheels/76/ee/9c/36bfe3e079df99acf5ae57f4e3464ff2771b34447d6d2f2148\n",
+            "  Building wheel for future (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for future: filename=future-0.18.2-py3-none-any.whl size=491070 sha256=a88fc5a63741d251b324b5ea807e07545bf380551128c58ae148e4216f936487\n",
+            "  Stored in directory: /root/.cache/pip/wheels/56/b0/fe/4410d17b32f1f0c3cf54cdfb2bc04d7b4b8f4ae377e2229ba0\n",
+            "Successfully built gym future\n",
+            "Installing collected packages: multidict, frozenlist, yarl, asynctest, async-timeout, aiosignal, pyDeprecate, future, fsspec, aiohttp, torchmetrics, PyYAML, gym, box2d-py, pyvirtualdisplay, pytorch-lightning\n",
+            "  Attempting uninstall: future\n",
+            "    Found existing installation: future 0.16.0\n",
+            "    Uninstalling future-0.16.0:\n",
+            "      Successfully uninstalled future-0.16.0\n",
+            "  Attempting uninstall: PyYAML\n",
+            "    Found existing installation: PyYAML 3.13\n",
+            "    Uninstalling PyYAML-3.13:\n",
+            "      Successfully uninstalled PyYAML-3.13\n",
+            "  Attempting uninstall: gym\n",
+            "    Found existing installation: gym 0.17.3\n",
+            "    Uninstalling gym-0.17.3:\n",
+            "      Successfully uninstalled gym-0.17.3\n",
+            "Successfully installed PyYAML-6.0 aiohttp-3.8.1 aiosignal-1.2.0 async-timeout-4.0.2 asynctest-0.13.0 box2d-py-2.3.5 frozenlist-1.3.0 fsspec-2022.3.0 future-0.18.2 gym-0.21.0 multidict-6.0.2 pyDeprecate-0.3.1 pytorch-lightning-1.5.8 pyvirtualdisplay-3.0 torchmetrics-0.8.0 yarl-1.7.2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -193,10 +338,25 @@
         "Display(visible=False, size=(1400, 900)).start()"
       ],
       "metadata": {
-        "id": "PajoGawCgRRp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PajoGawCgRRp",
+        "outputId": "81701a7e-efe6-44da-fff1-8c8c0f0060de"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<pyvirtualdisplay.display.Display at 0x7fe99427ca10>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -214,6 +374,7 @@
         "import gym\n",
         "import torch\n",
         "import random\n",
+        "import statistics\n",
         "\n",
         "import numpy as np\n",
         "import torch.nn.functional as F\n",
@@ -239,7 +400,7 @@
       "metadata": {
         "id": "YPGsF3v3kqmR"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -253,7 +414,7 @@
       "metadata": {
         "id": "7A6KIxrvkra3"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -287,7 +448,7 @@
       "metadata": {
         "id": "Kv2hGZSUk5w3"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -315,7 +476,7 @@
       "metadata": {
         "id": "GeHvOtiXlCEh"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -347,7 +508,7 @@
       "metadata": {
         "id": "6gd8iq-IlYvh"
       },
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -375,7 +536,7 @@
       "metadata": {
         "id": "VLOx3philaWe"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -400,7 +561,7 @@
       "metadata": {
         "id": "1T4ZqgDrlbTW"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -503,6 +664,8 @@
         "\n",
         "    self.play_episode(policy=self.policy, epsilon=epsilon)\n",
         "    self.log('episode/Return', self.env.return_queue[-1])\n",
+        "    returns = list(self.env.return_queue)[-100:] #logs the last 100 episodes of raining\n",
+        "    self.log('hp_matric', statistics.mean(returns)) #mean value of the 100 episodes, it will be the value that hyperparameter selection algorithm will monitor\n",
         "\n",
         "    if self.current_epoch % self.hparams.sync_rate == 0:\n",
         "      self.target_q_net.load_state_dict(self.q_net.state_dict())"
@@ -510,7 +673,7 @@
       "metadata": {
         "id": "iZgnFBFrlmK5"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
