--- a/03_Dueling_Deep_Q_networks.ipynb
+++ b/03_Dueling_Deep_Q_networks.ipynb
@@ -6,8 +6,7 @@
       "name": "03_Dueling_Deep_Q_networks.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN0V3kpuayiRk29Ra1cHOYl",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMB60fCeAqUHcJr09R8ICuv"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/JonasHagstrom79/PyTorch-Lightning/blob/main/03_Dueling_Deep_Q_networks.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -48,10 +37,144 @@
         "!pip install git+https://github.com/lusob/gym-ple"
       ],
       "metadata": {
-        "id": "KiizT2qQHe39"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KiizT2qQHe39",
+        "outputId": "28c636a0-f94f-452e-e644-8f442edfe3fa"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "The following packages were automatically installed and are no longer required:\n",
+            "  libnvidia-common-460 nsight-compute-2020.2.0\n",
+            "Use 'apt autoremove' to remove them.\n",
+            "The following NEW packages will be installed:\n",
+            "  xvfb\n",
+            "0 upgraded, 1 newly installed, 0 to remove and 42 not upgraded.\n",
+            "Need to get 784 kB of archives.\n",
+            "After this operation, 2,271 kB of additional disk space will be used.\n",
+            "Get:1 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 xvfb amd64 2:1.19.6-1ubuntu4.10 [784 kB]\n",
+            "Fetched 784 kB in 1s (531 kB/s)\n",
+            "Selecting previously unselected package xvfb.\n",
+            "(Reading database ... 155203 files and directories currently installed.)\n",
+            "Preparing to unpack .../xvfb_2%3a1.19.6-1ubuntu4.10_amd64.deb ...\n",
+            "Unpacking xvfb (2:1.19.6-1ubuntu4.10) ...\n",
+            "Setting up xvfb (2:1.19.6-1ubuntu4.10) ...\n",
+            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
+            "Collecting pygame\n",
+            "  Downloading pygame-2.1.2-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (21.8 MB)\n",
+            "\u001b[K     |████████████████████████████████| 21.8 MB 89.0 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: gym==0.17.3 in /usr/local/lib/python3.7/dist-packages (0.17.3)\n",
+            "Collecting pytorch-lightning==1.6.0\n",
+            "  Downloading pytorch_lightning-1.6.0-py3-none-any.whl (582 kB)\n",
+            "\u001b[K     |████████████████████████████████| 582 kB 31.6 MB/s \n",
+            "\u001b[?25hCollecting pyvirtualdisplay\n",
+            "  Downloading PyVirtualDisplay-3.0-py3-none-any.whl (15 kB)\n",
+            "Requirement already satisfied: numpy>=1.10.4 in /usr/local/lib/python3.7/dist-packages (from gym==0.17.3) (1.21.6)\n",
+            "Requirement already satisfied: cloudpickle<1.7.0,>=1.2.0 in /usr/local/lib/python3.7/dist-packages (from gym==0.17.3) (1.3.0)\n",
+            "Requirement already satisfied: pyglet<=1.5.0,>=1.4.0 in /usr/local/lib/python3.7/dist-packages (from gym==0.17.3) (1.5.0)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from gym==0.17.3) (1.4.1)\n",
+            "Requirement already satisfied: torch>=1.8.* in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning==1.6.0) (1.11.0+cu113)\n",
+            "Requirement already satisfied: tqdm>=4.41.0 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning==1.6.0) (4.64.0)\n",
+            "Collecting fsspec[http]!=2021.06.0,>=2021.05.0\n",
+            "  Downloading fsspec-2022.3.0-py3-none-any.whl (136 kB)\n",
+            "\u001b[K     |████████████████████████████████| 136 kB 67.1 MB/s \n",
+            "\u001b[?25hCollecting PyYAML>=5.4\n",
+            "  Downloading PyYAML-6.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (596 kB)\n",
+            "\u001b[K     |████████████████████████████████| 596 kB 60.0 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: tensorboard>=2.2.0 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning==1.6.0) (2.8.0)\n",
+            "Collecting torchmetrics>=0.4.1\n",
+            "  Downloading torchmetrics-0.8.2-py3-none-any.whl (409 kB)\n",
+            "\u001b[K     |████████████████████████████████| 409 kB 59.2 MB/s \n",
+            "\u001b[?25hCollecting pyDeprecate<0.4.0,>=0.3.1\n",
+            "  Downloading pyDeprecate-0.3.2-py3-none-any.whl (10 kB)\n",
+            "Requirement already satisfied: typing-extensions>=4.0.0 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning==1.6.0) (4.2.0)\n",
+            "Requirement already satisfied: packaging>=17.0 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning==1.6.0) (21.3)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning==1.6.0) (2.23.0)\n",
+            "Collecting aiohttp\n",
+            "  Downloading aiohttp-3.8.1-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (1.1 MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.1 MB 45.9 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging>=17.0->pytorch-lightning==1.6.0) (3.0.8)\n",
+            "Requirement already satisfied: future in /usr/local/lib/python3.7/dist-packages (from pyglet<=1.5.0,>=1.4.0->gym==0.17.3) (0.16.0)\n",
+            "Requirement already satisfied: google-auth<3,>=1.6.3 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.6.0) (1.35.0)\n",
+            "Requirement already satisfied: protobuf>=3.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.6.0) (3.17.3)\n",
+            "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.6.0) (57.4.0)\n",
+            "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.6.0) (0.6.1)\n",
+            "Requirement already satisfied: absl-py>=0.4 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.6.0) (1.0.0)\n",
+            "Requirement already satisfied: grpcio>=1.24.3 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.6.0) (1.44.0)\n",
+            "Requirement already satisfied: wheel>=0.26 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.6.0) (0.37.1)\n",
+            "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.6.0) (1.8.1)\n",
+            "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.6.0) (0.4.6)\n",
+            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.6.0) (1.0.1)\n",
+            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning==1.6.0) (3.3.6)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from absl-py>=0.4->tensorboard>=2.2.0->pytorch-lightning==1.6.0) (1.15.0)\n",
+            "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard>=2.2.0->pytorch-lightning==1.6.0) (4.2.4)\n",
+            "Requirement already satisfied: rsa<5,>=3.1.4 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard>=2.2.0->pytorch-lightning==1.6.0) (4.8)\n",
+            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard>=2.2.0->pytorch-lightning==1.6.0) (0.2.8)\n",
+            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard>=2.2.0->pytorch-lightning==1.6.0) (1.3.1)\n",
+            "Requirement already satisfied: importlib-metadata>=4.4 in /usr/local/lib/python3.7/dist-packages (from markdown>=2.6.8->tensorboard>=2.2.0->pytorch-lightning==1.6.0) (4.11.3)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.4->markdown>=2.6.8->tensorboard>=2.2.0->pytorch-lightning==1.6.0) (3.8.0)\n",
+            "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /usr/local/lib/python3.7/dist-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard>=2.2.0->pytorch-lightning==1.6.0) (0.4.8)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning==1.6.0) (1.24.3)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning==1.6.0) (2.10)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning==1.6.0) (3.0.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning==1.6.0) (2021.10.8)\n",
+            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard>=2.2.0->pytorch-lightning==1.6.0) (3.2.0)\n",
+            "Collecting asynctest==0.13.0\n",
+            "  Downloading asynctest-0.13.0-py3-none-any.whl (26 kB)\n",
+            "Collecting frozenlist>=1.1.1\n",
+            "  Downloading frozenlist-1.3.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (144 kB)\n",
+            "\u001b[K     |████████████████████████████████| 144 kB 47.3 MB/s \n",
+            "\u001b[?25hCollecting async-timeout<5.0,>=4.0.0a3\n",
+            "  Downloading async_timeout-4.0.2-py3-none-any.whl (5.8 kB)\n",
+            "Collecting yarl<2.0,>=1.0\n",
+            "  Downloading yarl-1.7.2-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (271 kB)\n",
+            "\u001b[K     |████████████████████████████████| 271 kB 46.5 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: charset-normalizer<3.0,>=2.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning==1.6.0) (2.0.12)\n",
+            "Collecting multidict<7.0,>=4.5\n",
+            "  Downloading multidict-6.0.2-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (94 kB)\n",
+            "\u001b[K     |████████████████████████████████| 94 kB 4.2 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning==1.6.0) (21.4.0)\n",
+            "Collecting aiosignal>=1.1.2\n",
+            "  Downloading aiosignal-1.2.0-py3-none-any.whl (8.2 kB)\n",
+            "Installing collected packages: multidict, frozenlist, yarl, asynctest, async-timeout, aiosignal, pyDeprecate, fsspec, aiohttp, torchmetrics, PyYAML, pyvirtualdisplay, pytorch-lightning, pygame\n",
+            "  Attempting uninstall: PyYAML\n",
+            "    Found existing installation: PyYAML 3.13\n",
+            "    Uninstalling PyYAML-3.13:\n",
+            "      Successfully uninstalled PyYAML-3.13\n",
+            "Successfully installed PyYAML-6.0 aiohttp-3.8.1 aiosignal-1.2.0 async-timeout-4.0.2 asynctest-0.13.0 frozenlist-1.3.0 fsspec-2022.3.0 multidict-6.0.2 pyDeprecate-0.3.2 pygame-2.1.2 pytorch-lightning-1.6.0 pyvirtualdisplay-3.0 torchmetrics-0.8.2 yarl-1.7.2\n",
+            "Collecting git+https://github.com/GrupoTuring/PyGame-Learning-Environment\n",
+            "  Cloning https://github.com/GrupoTuring/PyGame-Learning-Environment to /tmp/pip-req-build-jy3exx50\n",
+            "  Running command git clone -q https://github.com/GrupoTuring/PyGame-Learning-Environment /tmp/pip-req-build-jy3exx50\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from ple==0.0.2) (1.21.6)\n",
+            "Requirement already satisfied: Pillow in /usr/local/lib/python3.7/dist-packages (from ple==0.0.2) (7.1.2)\n",
+            "Building wheels for collected packages: ple\n",
+            "  Building wheel for ple (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for ple: filename=ple-0.0.2-py3-none-any.whl size=723175 sha256=913ac1d216ff45065084ae7275eaff4baac196fe8e93324695e7bb208a9fd86d\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-om7o71x7/wheels/1c/65/8c/4644500b42643db570312f5fc3e90e8c7848a17136cf202f16\n",
+            "Successfully built ple\n",
+            "Installing collected packages: ple\n",
+            "Successfully installed ple-0.0.2\n",
+            "Collecting git+https://github.com/lusob/gym-ple\n",
+            "  Cloning https://github.com/lusob/gym-ple to /tmp/pip-req-build-zdytm7st\n",
+            "  Running command git clone -q https://github.com/lusob/gym-ple /tmp/pip-req-build-zdytm7st\n",
+            "Building wheels for collected packages: gym-ple\n",
+            "  Building wheel for gym-ple (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for gym-ple: filename=gym_ple-0.3-py3-none-any.whl size=5342 sha256=03f4856900603bc0fa90f3763fb855b2d99dc339044443e16da088337bdbac61\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-7jq2f1av/wheels/f5/67/16/bd5c75c525ad25e77d5e645f832922f5464740ab5f650cee38\n",
+            "Successfully built gym-ple\n",
+            "Installing collected packages: gym-ple\n",
+            "Successfully installed gym-ple-0.3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -69,10 +192,25 @@
         "Display(visible=False, size=(1400, 900)).start()"
       ],
       "metadata": {
-        "id": "5KvWZEDgHoEa"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5KvWZEDgHoEa",
+        "outputId": "95a4e80d-dc57-48a6-fc2e-1adae924464a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<pyvirtualdisplay.display.Display at 0x7f2bef66a690>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -116,16 +254,31 @@
         "num_gpus = torch.cuda.device_count()"
       ],
       "metadata": {
-        "id": "eWCLaaHEHyrU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eWCLaaHEHyrU",
+        "outputId": "979bdd86-267f-4e46-a957-9818786c403a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pygame 2.1.2 (SDL 2.0.16, Python 3.7.13)\n",
+            "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
+            "couldn't import doomish\n",
+            "Couldn't import doom\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Copied from: https://colab.research.google.com/github/deepmind/dm_control/blob/master/tutorial.ipynb#scrollTo=gKc1FNhKiVJX\n",
-        "\n",
+        "#To be able to render the envronment using a list of frames\n",
         "def display_video(frames, framerate=30):\n",
         "  height, width, _ = frames[0].shape\n",
         "  dpi = 70\n",
@@ -148,7 +301,7 @@
       "metadata": {
         "id": "9aDqmhzgH0tL"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -163,12 +316,30 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "class DQN(nn.Module):\n",
+        "\n",
+        "  def __init__(self, hidden_size, obs_size, n_actions):\n",
+        "    super().__init__()\n",
+        "    self.net = nn.Sequential(\n",
+        "        nn.Linear(obs_size, hidden_size),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Linear(hidden_size, hidden_size),\n",
+        "        nn.ReLU(),\n",
+        "    )\n",
+        "    #Q(State, Action) = Value((State) tells the agent how good it is to be in that state) + Advantage(State, Action)\n",
+        "    self.fc_value = nn.Linear(hidden_size, 1)\n",
+        "    self.fc_adv = nn.Linear(hidden_size, n_actions)\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    x = self.net(x.float())\n",
+        "    adv = self.fc_adv(x)\n",
+        "    value = self.fc_value(x)\n",
+        "    return value + adv - torch.mean(adv, dim=1, keepdim=True)"
       ],
       "metadata": {
         "id": "M64qKWmeH5yb"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
