--- a/03_Dueling_Deep_Q_networks.ipynb
+++ b/03_Dueling_Deep_Q_networks.ipynb
@@ -6,7 +6,7 @@
       "name": "03_Dueling_Deep_Q_networks.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMB60fCeAqUHcJr09R8ICuv"
+      "authorship_tag": "ABX9TyPclJukX9cc/4SF0PDY0onS"
     },
     "kernelspec": {
       "name": "python3",
@@ -354,7 +354,16 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#fn: state -> action\n",
+        "def epsilon_greedy(state, env, net, epsilon=0.0):\n",
+        "  if np.random.random() < epsilon:\n",
+        "    action = env.action_space.sample()\n",
+        "  else:\n",
+        "    state = torch.tensor([state]).to(device)\n",
+        "    q_values = net(state)\n",
+        "    _, action = torch.max(q_values, dim=1)\n",
+        "    action = int(action.item())\n",
+        "  return action"
       ],
       "metadata": {
         "id": "Do2JEliMH_xz"
